--- a/css/agency.css
+++ b/css/agency.css
@@ -1089,6 +1089,7 @@ body
 .navbar-header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .navbar-toggle {
@@ -1097,14 +1098,19 @@ body
 
 @media (max-width: 767px) {
     .workshop-title {
-        display: inline-block;
-        width: auto;
-        text-align: left;
+        display: block;
+        width: 100%;
+        text-align: center;
         font-size: 14px; /* Adjust the font size for smaller screens */
     }
 
     .navbar-header {
-        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .navbar-toggle {
+        margin-left: auto;
     }
 
     .navbar-collapse {
