--- a/css/agency.css
+++ b/css/agency.css
@@ -1066,3 +1066,54 @@ body
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #fec503;}
 
+.navbar {
+    background-color: black;
+    color: white;
+}
+
+.navbar a {
+    color: white;
+}
+
+.navbar a:hover, .navbar a:focus {
+    color: #ccc;
+}
+
+.workshop-title {
+    font-size: 16px; /* Adjust the font size as needed */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.navbar-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-toggle {
+    margin-right: 0;
+}
+
+@media (max-width: 767px) {
+    .workshop-title {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 14px; /* Adjust the font size for smaller screens */
+    }
+
+    .navbar-header {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .navbar-toggle {
+        margin-left: auto;
+    }
+
+    .navbar-collapse {
+        margin-top: 10px; /* Add some space between the title and the menu items */
+    }
+}
