--- a/css/agency.css
+++ b/css/agency.css
@@ -1110,21 +1110,7 @@ body
         padding-top: 120px; /* Adjust for smaller screens if navbar height changes */
         margin-top: -120px;
     }
-	.navbar-header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .navbar-brand {
-        order: 1;
-        flex-grow: 1;
-        text-align: left;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    .navbar-toggle {
-        order: 2;
+	.navbar-header .navbar-brand {
+        display: none;
     }
 }
